corrections suite réunion

--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -49,13 +49,13 @@
             <p>
               <b>Hébergement :</b> 1&1 IONOS SARL<br>
               Adresse : 7 place de la Gare, 57201 Sarreguemines, France<br>
-              Tel : 0970 808 911 /<a href="http://www.ionos.fr">www.ionos.fr</a>
+              Tel : 0970 808 911 / <a href="http://www.ionos.fr">www.ionos.fr</a>
             </p>
 
             <p>
               <b>Conception du site :</b><br>
-              Web Design : Emilie Roquet / emilieroquet@gmail.com
-              Web Development : Thomas Freger / thomas.freger@gmail.com
+              Web Design : Emilie Roquet / <a href="mailto:emilieroquet@gmail.com" class="">emilieroquet@gmail.com</a><br>
+              Web Development : Thomas Freger / <a href="mailto:thomas.freger@gmail.com" class="">thomas.freger@gmail.com</a>
             </p>
           </div>
 
