corr scroll et logo modal

--- a/fr/index.html
+++ b/fr/index.html
@@ -690,7 +690,7 @@
         
         <div class="modal-logo">
           <img
-            src="../assets/images/logos_ldla/LDLA_couleur_condensé.svg"
+          src="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"
             alt="Logo Antiquaille"
             class="modal-logo-img"
           />
