--- a/fr/index.html
+++ b/fr/index.html
@@ -151,7 +151,7 @@
               >Professionnel
             </a> -->
           </article>
-          <video id="video" class="video-bg" muted playsinline autoplay loop preload="auto">
+          <video id="video" class="video-bg" muted playsinline autoplay loop>
             <source
               src="../assets/video/Montage_lantiquaille_5.mp4"
               type="video/mp4"
