liens vers googleform corr sliders

--- a/fr/index.html
+++ b/fr/index.html
@@ -14,6 +14,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../assets/fonts/Avenir.ttc" rel="application/x-font-ttf" />
     <link rel="stylesheet" href="https://use.typekit.net/fgy7gmd.css" />
+    <link rel="icon" 
+      type="image/png" 
+      href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
    </head>
   <body>
     <!--[if lt IE 7]>
@@ -140,7 +143,7 @@
               Que vous soyez une consommatrice avisée ou une utilisatrice occasionnelle, <span class="bold">donnez-nous votre avis</span> afin de nous aider à développer ce futur produit d’exception.
             </p>
             <h3 class="video-title">Parce que votre avis compte</h3>
-            <a href="" class="btn">Répondez à notre questionnaire</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScNkuzGnUmqgjmej8STOO1Bq1ErbXKNPGUWkmoFtKUmWXMmEQ/viewform?usp=sf_link" class="btn" target="_blank" rel="noopener noreferrer">Répondez à notre questionnaire</a>
             <!-- <a
               href="#"
               id="btn_disabled_pro"
@@ -550,7 +553,7 @@
               Ne partez pas avant d'avoir répondu à notre questionnaire (5 min)
               afin de nous aider à développer ce futur produit d'exception
             </p>
-            <a href="" class="btn-avis">Répondez à notre questionnaire</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScNkuzGnUmqgjmej8STOO1Bq1ErbXKNPGUWkmoFtKUmWXMmEQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="btn-avis">Répondez à notre questionnaire</a>
           </article>
         </div>
       </section>
@@ -559,7 +562,7 @@
         <div class="container partenaires-container">
           <h2 class="partenaires-title">Ils nous accompagnent</h2>
           <div class="split">
-            <a href="" class="featured__item" >
+            <a href="https://www.fpul-lyon.org/" target="_blank" rel="noopener noreferrer" class="featured__item" >
               <img
                 src="../assets/images/partenaires/fondation université Lyon.png"
                 alt="Fondation Université Lyon"
@@ -570,7 +573,7 @@
               />
             </a>
             
-            <a href="" class="featured__item">
+            <a href="https://www.lyonstartup.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/lyon_startup.png"
                 alt="Lyon Start-Up"
@@ -580,7 +583,7 @@
               data-aos-duration="1000"
               />
             </a>
-            <a href="" class="featured__item">
+            <a href="http://www.cosmetinlyon.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/cosmet_in_lyon.jpg"
                 alt="Cosmet'in Lyon"
@@ -629,21 +632,21 @@
               >contact@lantiquaille.com</a
             >
             <div class="social">
-              <a href="" class="social__link">
+              <a href="" target="_blank" rel="noopener noreferrer" class="social__link">
                 <img
                   src="../assets/images/social_medias/linkedin.svg"
                   alt="linkedin"
                   class="social__image"
                 />
               </a>
-              <a href="" class="social__link">
+              <a href="" target="_blank" rel="noopener noreferrer" class="social__link">
                 <img
                   src="../assets/images/social_medias/instagram.svg"
                   alt="instagram"
                   class="social__image"
                 />
               </a>
-              <a href="" class="social__link">
+              <a href="" target="_blank" rel="noopener noreferrer" class="social__link">
                 <img
                   src="../assets/images/social_medias/facebook.svg"
                   alt="facebook"
