--- a/fr/index.html
+++ b/fr/index.html
@@ -154,11 +154,19 @@
               >Professionnel
             </a> -->
           </article>
-          <video id="video" class="video-bg" muted playsinline autoplay loop>
+          <video id="video" class="video-bg" muted playsinline autoplay loop poster="../assets/video/video_poster.jpg">
             <source
               src="../assets/video/Montage_lantiquaille_5.mp4"
               type="video/mp4"
             />
+            <source
+              src="../assets/video/Montage_lantiquaille_5.webm"
+              type="video/webm"
+            />
+            <source
+            src="../assets/video/Montage_lantiquaille_5.ogv"
+            type="video/ogv"
+          />
           </video>
         </div>
       </section>
