--- a/fr/index.html
+++ b/fr/index.html
@@ -812,6 +812,12 @@
         </div>
       </div>
     </div>
+
+    <script>
+      let bgvideo = document.getElementById("video");
+      bgvideo.muted = true;
+      bgvideo.play();
+    </script>
     
     <script src="../index.js"></script>
 
