--- a/fr/index.html
+++ b/fr/index.html
@@ -68,7 +68,11 @@
       </nav>
 
       <div class="arrow-container">
-        <a href="#home" class="arrow-scroll" id=""><i class="arrow" ></i></a>
+        <!-- <a href="#home" class="arrow-scroll" id=""><i class="arrow" ></i></a> -->
+        <a href="#home" class="arrow-scroll" id="">
+          <img src="../assets/images/icon_down.svg" class="arrow"/>
+        </a>
+          
       </div>
 
       <nav class="mobile-navbar unselectable">
@@ -154,19 +158,19 @@
               >Professionnel
             </a> -->
           </article>
-          <video id="video" class="video-bg" muted playsinline autoplay loop poster="../assets/video/video_poster.jpg">
-            <source
-              src="../assets/video/Montage_lantiquaille_5.mp4"
-              type="video/mp4"
-            />
+          <video id="video" class="video-bg" muted playsinline autoplay loop preload="auto" poster="../assets/video/video_poster.jpg">
             <source
               src="../assets/video/Montage_lantiquaille_5.webm"
               type="video/webm"
             />
             <source
-            src="../assets/video/Montage_lantiquaille_5.ogv"
-            type="video/ogv"
-          />
+              src="../assets/video/Montage_lantiquaille_5.mp4"
+              type="video/mp4"
+            />
+            <source
+              src="../assets/video/Montage_lantiquaille_5.ogv"
+              type="video/ogv"
+            />
           </video>
         </div>
       </section>
@@ -826,11 +830,6 @@
        const btn = document.querySelector('#mc-embedded-subscribe');
 
        cb.checked = false;
-
-
-       console.log(cb.checked);
-       
-       console.log(cb.value);
 
        cb.addEventListener("change", function() {
         if(this.checked) {
