big commit responsive and multilingual

--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -14,6 +14,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="../assets/fonts/Avenir.ttc" rel="application/x-font-ttf" />
     <link rel="stylesheet" href="https://use.typekit.net/fgy7gmd.css" />
+    <link rel="alternate" hreflang="en" href="../en/legal-notice.html" />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -122,9 +123,9 @@
 
             <p>
               <span class="bold">Données collectées à caractère personnel :</span><br>
-              Lorsque cela est nécessaire à l’objet et l’exercice de sa mission, le site<a href="./index.html">www.lantiquaille.com</a> peut être amené à collecter des données à caractère personnel.<br>
+              Lorsque cela est nécessaire à l’objet et l’exercice de sa mission, le site <a href="./index.html">www.lantiquaille.com</a> peut être amené à collecter des données à caractère personnel.<br>
               Il est toutefois possible de visiter le site <a href="./index.html">www.lantiquaille.com</a> sans nécessairement communiquer d’informations personnelles.<br>
-              Le site www.lantiquaille.com ne collecte des données personnelles qu’avec l’accord explicite et toujours dans le cadre d’une démarche volontaire des internautes.<br><br>
+              Le site <a href="./index.html">www.lantiquaille.com</a> ne collecte des données personnelles qu’avec l’accord explicite et toujours dans le cadre d’une démarche volontaire des internautes.<br><br>
               A ce jour, cette collecte de données peut s’effectuer à deux endroits du site :
               <ol>
                 <li>Soit en haut de la page principale dans le cadre de la participation de l’internaute au questionnaire sur l’étude de marché proposée par le site</li>
@@ -216,7 +217,7 @@
         
       <div class="copyright">
         <div class="copyright-text">
-          © 2020 Les laboratoires de l’Antiquaille | Site web réalisé par <a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> et <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a>
+          © 2020 Les Laboratoires de L’Antiquaille | Site web réalisé par <a href="mailto:emilieroquet@gmail.com" class="">Emilie Roquet</a> et <a href="mailto:thomas.freger@gmail.com" class="">Thomas Freger</a>
           <!-- <div class="copyright-links">
             <a href="#" class="copyright-link">Mentions légales</a>
             
