--- a/fr/index.html
+++ b/fr/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" 
       type="image/png" 
       href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
+      <link rel="alternate" hreflang="fr" href="./index.html" />
       <link rel="alternate" hreflang="en" href="../en/index.html" />
    </head>
   <body>
