--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,8 @@
     <link rel="icon" 
       type="image/png" 
       href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
+      
+      <link rel="alternate" hreflang="en" href="./index.html" />
       <link rel="alternate" hreflang="fr" href="../fr/index.html" />
    </head>
   <body>
