--- a/fr/index.html
+++ b/fr/index.html
@@ -12,12 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="../assets/fonts/Avenir.ttc" rel="application/x-font-ttf" />
     <link rel="stylesheet" href="https://use.typekit.net/fgy7gmd.css" />
     <link rel="icon" 
       type="image/png" 
       href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
-      <link rel="alternate" hreflang="fr" href="./index.html" />
       <link rel="alternate" hreflang="en" href="../en/index.html" />
    </head>
   <body>
@@ -159,7 +157,7 @@
               >Professionnel
             </a> -->
           </article>
-          <video id="video" class="video-bg" muted playsinline autoplay loop preload="auto" poster="../assets/video/video_poster.jpg">
+          <video id="video" class="video-bg" controls="true" muted playsinline autoplay loop preload="auto" poster="../assets/video/video_poster.jpg">
             <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.mp4"
               type="video/mp4"
@@ -175,6 +173,8 @@
           </video>
         </div>
       </section>
+      
+      <div class="separator"></div>
 
       <section class="main-section panel projet-section" id="projet">
 
@@ -433,7 +433,7 @@
               <picture class="image">
                 <source srcset="../assets/images/equipe.webp" type="image/webp" class="image">
                 <source srcset="../assets/images/equipe.jpeg" type="image/jpeg" class="image"> 
-                <img src="../assets/images/equipe.jpeg" class="image" alt="Equipe">
+                <img src="../assets/images/equipe.jpeg" class="image image-science" alt="Equipe">
               </picture>
             </div>
 
