--- a/fr/inscription-newsletter.html
+++ b/fr/inscription-newsletter.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgy7gmd.css" />
+    <link rel="icon" 
+      type="image/png" 
+      href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
+      
+      <link rel="alternate" hreflang="en" href="../en/newsletter-register.html" />
   </head>
   <body>
 
