--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -14,6 +14,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fgy7gmd.css" />
     <link rel="alternate" hreflang="en" href="../en/legal-notice.html" />
+    <link rel="icon" 
+      type="image/png" 
+      href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
   </head>
   <body>
     <!--[if lt IE 7]>
