corr suite réunion scroll socialmedia order formchimp gender

--- a/en/suscribe-newsletter.html
+++ b/en/suscribe-newsletter.html
@@ -82,8 +82,8 @@
 
           <div class="mc-field-group input-group">            
             <div id="genderArea">
-              <input type="radio" class="radio" value="Madame" name="MMERGE8" id="mce-MMERGE8-0" checked/><label for="mce-MMERGE8-0">Female</label>
-              <input type="radio" class="radio" value="Monsieur" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Male</label>
+              <input type="radio" class="radio" value="Madame" name="MMERGE8" id="mce-MMERGE8-0" required/><label for="mce-MMERGE8-0">Mrs.</label>
+              <input type="radio" class="radio" value="Monsieur" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Mr. *</label>
             </div>
           </div>
 
