modif suite mail florent

--- a/fr/index.html
+++ b/fr/index.html
@@ -217,7 +217,7 @@
                       <span class="bold">confort d’utilisation</span> des plus grands soins
                       dermo-cosmétiques, le meilleur des
                       <span class="bold">ingrédients naturels</span> et la volonté de
-                      <span class="bold">respecter la planète dans son ensemble</span>.
+                      <span class="bold">respecter la planète</span>.
                     </p>
                   </article>
                 </div>
@@ -316,7 +316,7 @@
               data-aos-delay="250"
               data-aos-duration="1000">
                 Il sera le fruit de l’excellence de la recherche lyonnaise en dermatologie et dermo-cosmétique. 
-                Ce futur soin unique combinera l’efficacité prouvée des soins dermatologiques et le confort d’utilisation des produits dermo-cosmétiques haut de gamme.
+                Ce soin unique combinera l’efficacité prouvée des soins dermatologiques et le confort d’utilisation des produits dermo-cosmétiques haut de gamme.
               </p>
             </div>
           </div>
@@ -356,14 +356,14 @@
               <h2 class="produit-article-title" data-aos="fade-up" data-aos-offset="200"
               data-aos-delay=""
               data-aos-duration="1000">
-                Une crème d’exception<br />Bio et Vegan<br />qui respecte la
-                planète<br />dans son ensemble
+                Une crème d’exception<br />anti-âge Bio et Vegan<br />qui respecte la
+                planète
               </h2>
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
               Le développement de ce produit Bio bannira tout test sur des animaux ou tout ingrédient d’origine animale. 
-              Sa production visera un impact environnemental le plus neutre possible. Les packaging et suremballages utilisés seront constitués de matériaux très qualitatifs mais tous recyclables.
+              Sa production visera un impact environnemental le plus neutre possible. Les packaging et suremballages utilisés seront constitués de matériaux très qualitatifs et tous recyclables.
               </p>
             </div>
           </div>
@@ -450,9 +450,9 @@
                   <article class="equipe-article-paragraphe spacing">
                     <p class="">
                       « Les Laboratoires de L’Antiquaille » est un
-                      <span class="bold">projet collaboratif</span>. Bien que porté par un
+                      <span class="bold">projet collaboratif</span>. Porté par un
                       spécialiste du développement et de la commercialisation
-                      de produits cosmétiques haut de gamme, il compte 
+                      de produits cosmétiques haut de gamme, ce projet compte 
                       <span class="bold">s’appuyer non seulement sur la communauté
                         scientifique mais également impliquer les consommatrices</span>
                       de soins dans la conception et le développement des
@@ -702,7 +702,7 @@
     <div class="cookies-consent">
       <div class="box">
           <p>
-            En poursuivant la navigation sur ce site, vous acceptez l'utilisation de Cookies, pour réaliser des statistiques de visites anonymes. <a hreflang="fr" href="./mentions-legales.html" class="mentions-link"><nobr>En savoir plus</nobr></a>
+            En poursuivant la navigation sur ce site, vous acceptez l'utilisation de Cookies pour réaliser des statistiques de visites anonymes. <a hreflang="fr" href="./mentions-legales.html" class="mentions-link"><nobr>En savoir plus</nobr></a>
             <a href="" class="btn btn-cookies-consent" id="consent-btn">OK</a>  
           </p>
         
