--- a/en/suscribe-newsletter.html
+++ b/en/suscribe-newsletter.html
@@ -263,6 +263,24 @@
     min: $.validator.format("Veuillez entrer une valeur supérieure ou égale à {0}.")
   });}(jQuery));
   var $mcj = jQuery.noConflict(true);
+
+      // select the target node
+      var target = document.getElementById('mce-success-response');
+
+// create an observer instance
+var observer = new MutationObserver(function(mutations) {
+  mutations.forEach(function(mutation) {
+    if (target.innerHTML === "Merci pour votre inscription!") {
+      target.innerHTML = "Thank you for subscribing!";
+    }
+  });
+});
+
+// configuration of the observer:
+var config = { attributes: true, childList: true, characterData: true };
+
+// pass in the target node, as well as the observer options
+observer.observe(target, config);
   </script>
 
 
