--- a/en/suscribe-newsletter.html
+++ b/en/suscribe-newsletter.html
@@ -82,8 +82,8 @@
 
           <div class="mc-field-group input-group">            
             <div id="genderArea">
-              <input type="radio" class="radio" value="Madame" name="MMERGE8" id="mce-MMERGE8-0" required/><label for="mce-MMERGE8-0">Mrs.</label>
-              <input type="radio" class="radio" value="Monsieur" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Mr. *</label>
+              <input type="radio" class="radio" value="Madame" name="MMERGE8" id="mce-MMERGE8-0" required/><label for="mce-MMERGE8-0">Mrs</label>
+              <input type="radio" class="radio" value="Monsieur" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Mr *</label>
             </div>
           </div>
 
@@ -110,13 +110,14 @@
 
           <input type="hidden" value="EN" name="MMERGE9" class="" id="mce-MMERGE9">
 
+          <input type="hidden" value="" name="MMERGE3" class="" id="mce-MMERGE3">
 
           <p class="indicates-req">
             <span class="asterisk">*</span> Information required
           </p>
 
           <div class="checkbox-container">
-            <input type="checkbox" id="checkbox" class="checkbox"/>
+            <input type="checkbox" id="checkbox" class="checkbox" id="gdpr_14794" name="gdpr[14794]"/>
             <label for="checkbox" class="label">
               YES, I would like to receive regular information about the progress of the "Les Laboratoires de L'Antiquaille" project in compliance with the current European General Data Protection Regulation (GDRP).
             </label>
@@ -211,6 +212,23 @@
       return false;
     }
    });
+
+
+   if (document.querySelectorAll('input[name="MMERGE8"]')) {
+    document.querySelectorAll('input[name="MMERGE8"]').forEach((elem) => {
+        elem.addEventListener("change", function(event) {
+        var item = event.target.value;
+        console.log(item);
+        if(item == "Monsieur") {
+          document.getElementById("mce-MMERGE3").value = "Mr";
+        }
+        else {
+          document.getElementById("mce-MMERGE3").value = "Mrs";
+        }
+        console.log(document.getElementById("mce-MMERGE3").value);
+      });      
+    });
+  }
    
 </script>
   
@@ -239,6 +257,8 @@
   ftypes[8]='radio';
   fnames[9]='MMERGE9';
   ftypes[9]='text'; 
+  fnames[10]='MMERGE3';
+  ftypes[10]='text'; 
   /*
   * Translated default messages for the $ validation plugin.
   * Locale: FR
