--- a/fr/index.html
+++ b/fr/index.html
@@ -744,7 +744,7 @@
         
         background-color: #fff;
         font-size: 12px;
-        color: #80705a;
+            color: #00721c;
       }
 
       #mce-success-response {
@@ -775,8 +775,8 @@
 
               <div class="mc-field-group input-group">            
                 <div id="genderArea">
-                  <input type="radio" class="radio" value="Madame" name="MMERGE8" id="mce-MMERGE8-0" required/><label for="mce-MMERGE8-0">Madame</label>
-                  <input type="radio" class="radio" value="Monsieur" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Monsieur *</label>
+                  <input type="radio" class="radio" value="F" name="MMERGE8" id="mce-MMERGE8-0" required/><label for="mce-MMERGE8-0">Madame</label>
+                  <input type="radio" class="radio" value="M" name="MMERGE8" id="mce-MMERGE8-1"/><label for="mce-MMERGE8-1">Monsieur *</label>
                 </div>
               </div>
 
@@ -865,7 +865,6 @@
         }
         else {
             // video is not playing
-            console.log("video is not playing");
             bgvideo.controls = false;
             bgvideo.muted = true;
             bgvideo.playsinline = true;
@@ -911,14 +910,12 @@
         document.querySelectorAll('input[name="MMERGE8"]').forEach((elem) => {
           elem.addEventListener("change", function(event) {
             var item = event.target.value;
-            console.log(item);
-            if(item == "Monsieur") {
+            if(item == "M") {
               document.getElementById("mce-MMERGE3").value = "Monsieur";
             }
             else {
               document.getElementById("mce-MMERGE3").value = "Madame";
             }
-            console.log(document.getElementById("mce-MMERGE3").value);
           });
         });
       }
