--- a/en/index.html
+++ b/en/index.html
@@ -745,7 +745,7 @@
               <div class="checkbox-container">
                 <input type="checkbox" id="checkbox" class="checkbox" id="gdpr_14794" name="gdpr[14794]"/>
                 <label for="checkbox" class="label">
-                  YES, I would like to receive regular information about the progress of the "Les Laboratoires de L'Antiquaille" project in compliance with the current European General Data Protection Regulation (GDRP).
+                  YES, I would like to receive regular information about the progress of the "Les Laboratoires de L'Antiquaille" project in compliance with the current European General Data Protection Regulation (GDPR).
                 </label>
               </div>
 
