responsive corr emilie

--- a/en/index.html
+++ b/en/index.html
@@ -143,10 +143,10 @@
               src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
               type="video/webm" onerror="fallback(parentNode)"
             />
-            <source
+            <!-- <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.ogv"
               type="video/ogv"
-            />
+            /> -->
             <img src="../assets/video/video_poster.jpg" />
           </video>
         </div>
