--- a/fr/index.html
+++ b/fr/index.html
@@ -158,20 +158,24 @@
             </a> -->
           </article>
           
-          <video id="video" class="video-bg" muted playsinline autoplay loop poster="../assets/video/video_poster.jpg">
+          <video id="video" class="video-bg" muted playsinline autoplay loop poster="../assets/video/video_poster_visage.jpg">
             <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.mp4"
               type="video/mp4"
             />
             <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
-              type="video/webm" onerror="fallback(parentNode)"
+              type="video/webm"
             />
+            <!-- <source
+              src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
+              type="video/webm" onerror="fallback(parentNode)"
+            /> -->
             <!-- <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.ogv"
               type="video/ogv"
             /> -->
-            <img src="../assets/video/video_poster.jpg" />
+            <!-- <img src="../assets/video/video_poster_visage.jpg" /> -->
           </video>
         </div>
         
