--- a/fr/index.html
+++ b/fr/index.html
@@ -163,19 +163,19 @@
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.mp4"
               type="video/mp4"
             />
-            <source
-              src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
-              type="video/webm"
-            />
             <!-- <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
-              type="video/webm" onerror="fallback(parentNode)"
+              type="video/webm"
             /> -->
+            <source
+              src="../assets/video/Montage_lantiquaille_5-reduced-1280_1.webm"
+              type="video/webm" onerror="fallback(parentNode)"
+            />
             <!-- <source
               src="../assets/video/Montage_lantiquaille_5-reduced-1280.ogv"
               type="video/ogv"
             /> -->
-            <!-- <img src="../assets/video/video_poster_visage.jpg" /> -->
+            <img src="../assets/video/video_poster_visage.jpg" />
           </video>
         </div>
         
