update1 timing + new partner

--- a/en/index.html
+++ b/en/index.html
@@ -488,12 +488,12 @@
           data-aos-duration="1000">
             <h1 class="timing-title">The timing</h1>
             <p class="timing-text">
-              The project is in its early stages. In July 2020, 
-              <span class="bold">the "Les Laboratoires de L'Antiquaille" project was selected to join the Lyon Start-Up Programme</span>. 
-              This mentoring programme is run by the University of Lyon Foundation and involves the key figures and bodies in the world of entrepreneurship in Lyon and the surrounding region.
+              The "Les Laboratoires de L'Antiquaille" project was selected to join the Lyon Start-Up Programme, which took place throughout the 4th quarter of 2020. 
+              This mentoring programme is run by the Foundation for the University of Lyon and involves the key figures in entrepreneurship in Lyon and its region. 
+              Today the project is coached by Grow Up, a consulting firm specialized in strategy and innovation financing for start-ups.
             </p>
             <p class="timing-text">
-              The objective plan is to begin the 12 months of development work of on this future innovative and outstanding anti-ageing cream during the first quarter of 2021 for and to target a <span class="bold">launch in early 2022</span>.
+              The plan is to begin the 12 months development work on this future outstanding anti-ageing cream during the first quarter of 2021 to target a <span class="bold">launch in early 2022</span>.
             </p>
           </article>
         </div>
@@ -541,6 +541,16 @@
               <img
                 src="../assets/images/partenaires/cosmet_in_lyon.jpg"
                 alt="Cosmet'in Lyon"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>
+            <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
+                alt="Grow Up"
                 class="featured__img"
                 data-aos="fade-up"
               data-aos-delay="200"
