--- a/fr/index.html
+++ b/fr/index.html
@@ -548,17 +548,14 @@
           data-aos-duration="1000">
             <h1 class="timing-title">Le timing</h1>
             <p class="timing-text">
-              Le projet en est à son démarrage.
-              En juillet 2020, <span class="bold">le projet « Les Laboratoires de L’Antiquaille
-                » a été sélectionné pour intégrer le Programme Lyon Start-Up</span
-              >. Il s’agit d’un programme d’accompagnement proposé par
-              La Fondation de L’Université de Lyon et qui rassemble les principaux acteurs de l’entrepreneuriat sur Lyon et sa région.
+              Le projet « Les Laboratoires de L’Antiquaille » a été sélectionné pour participer au Programme Lyon Start-Up qui s’est déroulé tout au long du 4ème trimestre 2020. 
+              Ce programme d’accompagnement est organisé par La Fondation pour L’Université de Lyon et rassemble les principaux acteurs de l’entrepreneuriat sur Lyon et sa région. 
+              Aujourd’hui le projet est accompagné par Grow Up, société de conseil en stratégie et financement de l’innovation pour les start-up.
             </p>
             <p class="timing-text">
-              L’objectif est de démarrer les 12 mois de travaux de développement
-              de cette future crème anti-âge d'exception début 2021 pour un
+              L’objectif du projet est de démarrer les 12 mois de travaux de développement de cette future crème anti-âge d'exception au cours du premier trimestre 2021 pour un objectif de
               <span class="bold">lancement début 2022</span>.
-            </p>
+            </p>  
           </article>
         </div>
 
@@ -606,6 +603,16 @@
               <img
                 src="../assets/images/partenaires/cosmet_in_lyon.jpg"
                 alt="Cosmet'in Lyon"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>
+            <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
+                alt="Grow Up"
                 class="featured__img"
                 data-aos="fade-up"
               data-aos-delay="200"
