--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <title>Les Laboratoires de L'Antiquaille</title>
+    <meta name="google-site-verification" content="2I0zJERR7LLuXQcuTHhxmE9RlUiydPx5woyTPsXn1U4" />
     <script>
       if (navigator.browserLanguage)
       var language = navigator.browserLanguage;
