--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,7 @@
       type="image/png" 
       href="../assets/images/logos_ldla/LDLA_couleur_condensé_fond.png"/>
       <link rel="alternate" hreflang="fr" href="../fr/index.html" />
+      <meta name="google-site-verification" content="2I0zJERR7LLuXQcuTHhxmE9RlUiydPx5woyTPsXn1U4" />
    </head>
   <body>
     <!--[if lt IE 7]>
