netlify legal notice

--- a/en/legal-notice.html
+++ b/en/legal-notice.html
@@ -60,9 +60,9 @@
             </p>
 
             <p>
-              <span class="bold">Hosting:</span> 1&1 IONOS SARL<br>
-              Address: 7 place de la Gare, 57201 Sarreguemines, France<br>
-              Tel: 0970 808 911 / <a href="http://www.ionos.fr">www.ionos.fr</a>
+              <span class="bold">Hosting:</span> Netlify<br>
+              Address: 2325 3rd Street, Suite 296, San Francisco, CA 94107, USA<br>
+              Tel: +1 415-691-1573 / <a href="https://www.netlify.com">www.netlify.com</a>
             </p>
 
             <p>
