--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -6,14 +6,14 @@
 <html lang="fr">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-185947565-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185947565-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'UA-185947565-1');
-</script>
+      gtag('config', 'UA-185947565-1');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Les Laboratoires de l'Antiquaille - Mentions légales</title>
@@ -60,9 +60,9 @@
             </p>
 
             <p>
-              <span class="bold">Hébergement :</span> 1&1 IONOS SARL<br>
-              Adresse : 7 place de la Gare, 57201 Sarreguemines, France<br>
-              Tel : 0970 808 911 / <a href="http://www.ionos.fr">www.ionos.fr</a>
+              <span class="bold">Hébergement :</span> Netlify<br>
+              Adresse : 2325 3rd Street, Suite 296, San Francisco, CA 94107, USA<br>
+              Tel : +1 415-691-1573 / <a href="https://www.netlify.com">www.netlify.com</a>
             </p>
 
             <p>
