netlify legal notice target blank

--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -62,7 +62,7 @@
             <p>
               <span class="bold">Hébergement :</span> Netlify<br>
               Adresse : 2325 3rd Street, Suite 296, San Francisco, CA 94107, USA<br>
-              Tel : +1 415-691-1573 / <a href="https://www.netlify.com">www.netlify.com</a>
+              Tel : +1 415-691-1573 / <a href="https://www.netlify.com" target="_blank" rel="noopener noreferrer">www.netlify.com</a>
             </p>
 
             <p>
