animated numbers + text timing + suppr skincare

--- a/en/index.html
+++ b/en/index.html
@@ -127,7 +127,7 @@
         <div class="container">
           <article class="video-article spacing">
             <h2 class="video-title">
-              Take part in the creation of one of the best Organic and Vegan anti-ageing skincare creams on the market.
+              Take part in the creation of one of the best Organic and Vegan anti-ageing creams on the market.
             </h2>
             <p>
               Whether you are a well-informed customer or an occasional user, <span class="bold">give us your opinion</span> and help us to develop this unique and innovative product.
@@ -194,7 +194,7 @@
                     <p class="">
                       The project aims 
                       <span class="bold"
-                        >to create one of the best Organic and Vegan anti-ageing skincare creams on the market</span
+                        >to create one of the best Organic and Vegan anti-ageing creams on the market</span
                       >. Scheduled for <span class="bold">launch in early 2022</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
                     </p>
                       <p class="">
@@ -273,7 +273,7 @@
           <div class="a-propos-both">
             <h1 class="produit-title">MORE ABOUT OUR FUTURE PRODUCT</h1>
             <p class="produit-apropos-text">
-              It will be one of the <span class="bold">best Organic and Vegan anti-ageing skincare creams</span> on the market.
+              It will be one of the <span class="bold">best Organic and Vegan anti-ageing creams</span> on the market.
             </p>
           </div>
         </div>
@@ -503,7 +503,7 @@
               Today the project is coached by Grow Up, a consulting firm specialized in strategy and innovation financing for start-ups.
             </p>
             <p class="timing-text">
-              The plan is to begin the 12 months development work on this future outstanding anti-ageing cream during the first quarter of 2021 to target a <span class="bold">launch in early 2022</span>.
+              The plan is to begin the development work on this future outstanding anti-ageing cream during the first semester of 2021 to target a <span class="bold">launch during the second semester of 2022</span>.
             </p>
           </article>
         </div>
@@ -567,6 +567,17 @@
               data-aos-duration="1000"
               />
             </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="numbers-section">
+        <div class="container numbers-container">
+          <h2 class="numbers-title">You are currently</h2>
+          <div class="split-numbers">
+            <div><span class="follow-number" id="follow-count">0</span><div class="text-number">to follow us</div></div>
+            <div><span class="country-number" id="country-count">0</span><div class="text-number">countries around the world</div></div>
+            <div><span class="participe-number" id="participe-count">0</span><div class="text-number">to have participated in our survey</div></div>
           </div>
         </div>
       </section>
