--- a/fr/index.html
+++ b/fr/index.html
@@ -563,8 +563,8 @@
               Aujourd’hui le projet est accompagné par Grow Up, société de conseil en stratégie et financement de l’innovation pour les start-up.
             </p>
             <p class="timing-text">
-              L’objectif du projet est de démarrer les 12 mois de travaux de développement de cette future crème anti-âge d'exception au cours du premier trimestre 2021 pour un objectif de
-              <span class="bold">lancement début 2022</span>.
+              L’objectif du projet est de démarrer les travaux de développement de cette future crème anti-âge d'exception au cours du premier semestre 2021 pour un objectif de
+              <span class="bold">lancement au cours du 2ème semestre de 2022</span>.
             </p>  
           </article>
         </div>
@@ -629,6 +629,17 @@
               data-aos-duration="1000"
               />
             </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="numbers-section">
+        <div class="container numbers-container">
+          <h2 class="numbers-title">Vous êtes à ce jour</h2>
+          <div class="split-numbers">
+            <div><span class="follow-number" id="follow-count">0</span><div class="text-number">à nous suivre</div></div>
+            <div><span class="country-number" id="country-count">0</span><div class="text-number">pays dans le monde</div></div>
+            <div><span class="participe-number" id="participe-count">0</span><div class="text-number">à avoir participé à notre étude</div></div>
           </div>
         </div>
       </section>
