--- a/en/index.html
+++ b/en/index.html
@@ -195,7 +195,7 @@
                       The project aims 
                       <span class="bold"
                         >to create one of the best Organic and Vegan anti-ageing creams on the market</span
-                      >. Scheduled for <span class="bold">launch in early 2022</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
+                      >. Scheduled for <span class="bold">launch during the second semester of 2022</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
                     </p>
                       <p class="">
                       <span class="bold">Designed and manufactured in Lyon</span> in renowned laboratories, it will represent a perfectly balanced union of advanced research in <span class="bold">dermatology</span>, 
@@ -378,7 +378,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-              This unique product will be sold exclusively online from the beginning of 2022 under the brand name "Les Laboratoires de <nobr>l'Antiquaille".</nobr>
+              This unique product will be sold exclusively online during the second semester of 2022 under the brand name "Les Laboratoires de <nobr>l'Antiquaille".</nobr>
               <br />This distribution model will make it possible to reduce the number of intermediaries and enable us to offer it at a fair price.
               </p>
             </div>
