--- a/fr/index.html
+++ b/fr/index.html
@@ -220,7 +220,7 @@
                       <span class="bold"
                         >créer l’une des meilleures crèmes de soin anti-âge 
                         Bio et Vegan du marché</span
-                      >. Prévue pour un lancement au début de l’année 2022,
+                      >. Prévue pour un lancement au cours du 2ème semestre 2022,
                       cette <span class="bold">crème nouvelle génération</span> sera vendue
                       exclusivement en <span class="bold">E-Commerce</span>.
                     </p>
@@ -427,7 +427,7 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-                Ce produit d’exception sera commercialisé exclusivement en ligne à partir du début de l’année 2022 sous la marque « Les Laboratoires de <nobr>l’Antiquaille ».</nobr> <br /> Ce mode de distribution permettra de réduire le nombre d’intermédiaires et de pouvoir le proposer à son juste prix.
+                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 2ème semestre 2022 sous la marque « Les Laboratoires de <nobr>l’Antiquaille ».</nobr> <br /> Ce mode de distribution permettra de réduire le nombre d’intermédiaires et de pouvoir le proposer à son juste prix.
               </p>
             </div>
           </div>
